Implement getting single workshop file details. Fill mod preview url on upload.